--- a/web/src/index.html
+++ b/web/src/index.html
@@ -10,5 +10,6 @@
   </head>
   <body>
     <div id="redwood-app"></div>
+    <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   </body>
 </html>
