Adds meta stuffs and favicon

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Jonathan Speek</title>
+    <meta name="theme-color" content="#ffffff">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Description"
+      content="Developer & Musician from Colorado, USA. Currently building the future of the web at Netlify.">
+    <meta name="Keywords"
+      content="React, Ruby, Rails, HTML, CSS, JavaScript, Spacegrid, Python, Code, Colorado, Denver, Boulder, Software Engineer, Developer, Designer">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:900|Space+Mono:400,700&display=swap"
     rel="stylesheet">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Jonathan Speek</title>
   </head>
   <body>
     <div id="redwood-app"></div>
